--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="columns block">
             <div class="column is-one-quarter">
-                <img width="140px" src="/assets/logo.png" alt="Training360 logo" class="image">
+                <img width="140px" src="./assets/logo.png" alt="Training360 logo" class="image">
             </div>
             <div class="column">
                 <div id="main-title" class="title">Automata tesztelés feladatok és dummy felületek</div>
@@ -27,7 +27,7 @@
                 <ul>
                     <li>
                         <h3>
-                            <a href="/01_hello_world/01_hello_world.html">1. feladat</a>
+                            <a href="./01_hello_world/01_hello_world.html">1. feladat</a>
                         </h3>
                     </li>
                 </ul>
