Fix again URL-s

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="columns block">
             <div class="column is-one-quarter">
-                <img width="140px" src="./assets/logo.png" alt="Training360 logo" class="image">
+                <img width="140px" src="assets/logo.png" alt="Training360 logo" class="image">
             </div>
             <div class="column">
                 <div id="main-title" class="title">Automata tesztelés feladatok és dummy felületek</div>
