--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li>
                         <h3>
-                            <a href="./01_hello_world/01_hello_world.html">1. feladat</a>
+                            <a href="01_hello_world/01_hello_world.html">1. feladat</a>
                         </h3>
                     </li>
                 </ul>
