--- a/01_hello_world/01_hello_world.html
+++ b/01_hello_world/01_hello_world.html
@@ -4,26 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automation/Hello World</title>
+    <title>1. Feladat</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <div class="box has-background-light block">
-        <div class="content">
-            <h1>1. Feladat</h1>
-            <div class="subtitle">Elemek megkeresése</div>
-            <ul class="block">
-                <li>Keresd meg a Hello Selenium! elemet az oldalon, és ellenőrizd, hogy a szöveg tartalma valóban "Hello Selenium!"</li>
-                <li>Az oldal úgy van megírva, hogy időnként a felírat hibásan jelenik meg.</li>
-                <li>Az alábbi selectorokat használd:
-                    <ul>
-                        <li>id</li>
-                        <li>name</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
     <div class="container block">
         <div id="main-title" class="title">Hello Selenium!</div>
         <div class="subtitle">This is just a dummy page</div>
