--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </div>
 
         <div class="content block">
-            <h2>Feladatok</h2>
+            <h2>Példák</h2>
             <div class="contain box">
                 <ul>
                     <li>
                         <h3>
-                            <a href="01_hello_world/01_hello_world.html">1. feladat</a>
+                            <a href="01_hello_world/01_hello_world.html">Hello World</a>
                         </h3>
                     </li>
                 </ul>
