--- a/01_hello_world/01_hello_world.html
+++ b/01_hello_world/01_hello_world.html
@@ -46,9 +46,11 @@
         }
         function pageRuin(){
             document.getElementById('main-title').textContent = "Error happened"
-            document.getElementById('id-field').textContent = "-"
-            document.getElementById('email-field').textContent = "-"
-            document.getElementById('date-field').textContent = "-"
+            document.getElementById('id-field').textContent = "HW/1234"
+            document.getElementById('email-field').textContent = "www.google.com"
+            document.getElementById('date-field').textContent = "01-01-1990"
+            document.getElementsByClassName('subtitle')[0].textContent = "-"
+            document.title = "Error happened"
         }
     </script>
 </body>
