--- a/pages/02_webshop.html
+++ b/pages/02_webshop.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="section content">
+                    <div id="ordered-items" class="section content">
                         <div class="is-size-3">Kosár</div>
 
                         <ul id="ordered-items">
