--- a/pages/03_form.html
+++ b/pages/03_form.html
@@ -48,7 +48,7 @@
         <div class="field">
           <label class="label" for="email">Email</label>
           <div class="control has-icons-left has-icons-right">
-            <input v-model="email" id="email" class="input is-danger" type="email" placeholder="Email input">
+            <input v-model="email" id="email" class="input" :class="{'is-danger': emailError}" type="email" placeholder="Email input">
             <span class="icon is-small is-left">
               <i class="fas fa-envelope"></i>
             </span>
@@ -137,7 +137,7 @@
         },
         computed: {
           emailError() {
-            return this.email.length !== 0
+            return this.email.length !== 0 && this.email.indexOf('@') === -1;
           }
         }
       };
