--- a/pages/03_form.html
+++ b/pages/03_form.html
@@ -154,7 +154,7 @@
 
           <div class="field is-grouped">
             <div class="control">
-              <button @click="submit" class="button is-link">Submit</button>
+              <button id="btn-submit" @click="submit" class="button is-link">Submit</button>
             </div>
             <div class="control">
               <button class="button is-link is-light">Cancel</button>
