Refactor freeze icon

--- a/pages/04_forecast.html
+++ b/pages/04_forecast.html
@@ -43,7 +43,7 @@
           <img
             width="32"
             v-if="freeze"
-            src="/assets/cold.png"
+            src="cold.png"
             alt="freeze"
             class="block"
           />
