--- a/pages/04_forecast.html
+++ b/pages/04_forecast.html
@@ -39,7 +39,7 @@
       <div class="container block">
         <div class="is-size-3">Hőmérséklet:</div>
         <div class="box is-flex has-background-light" style="max-width: 10rem;">
-          <div class="is-size-4 mx-3"><span>{{forecast}}</span> C°</div>
+          <div class="is-size-4 mx-3"><span>{{forecast}}</span> °C</div>
           <img
             width="32"
             v-if="freeze"
